--- a/view.html
+++ b/view.html
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
+  <h1>Online Store</h1>
+  <h2>The Long Tail</h2>
+  <div id="image">
+    <img src="images/long_tail.jpg"></img>
+  </div>
+  <div id="purchase">
+    <span id="price">&euro;16.99</span>
+    <a href="#">Add to basket</a>
+  </div>
+  <div id="details">
+    <ul>
+      <li>by <a href="#">Chris Anderson</a></li>
+      <li>The power of the economy (<a href="#">more...</a>)</li>
+    </ul>
+  </div>
+  <div id="navigation">
+    <ul>
+      <li><a href="#">Basket</a></li>
+      <li><a href="browse.html">Categories</a></li>
+      <li><a href="#">Home</a></li>
+    </ul>
+  </div>
+  <p id="copyright">Copyright &copy; 2008</p>
+  <p><a href="#">View full version</a></p>
 </html>
