--- a/browse.html
+++ b/browse.html
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+  <h1>Online Store</h1>
 
+  <div id="navigation">
+    <ul>
+      <li><a href="#">Basket</a></li>
+      <li><a href="browse.html">Categories</a></li>
+      <li><a href="#">Home</a></li>
+    </ul>
+  </div>
+  <p id="copyright">Copyright &copy; 2008</p>
+  <p><a href="#">View full version</a></p>
 </html>
