--- a/view.html
+++ b/view.html
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <h1>Online Store</h1>
+  <h1>BookStore Online</h1>
   <h2>The Long Tail</h2>
   <div id="image">
     <img src="images/long_tail.jpg"></img>
   </div>
   <div id="purchase">
     <span id="price">&euro;16.99</span>
-    <a href="#">Add to basket</a>
+    <span id="stock" class="in-stock">In stock</span>
+    <a href="#">Buy now..</a>
   </div>
   <div id="details">
     <ul>
       <li>by <a href="#">Chris Anderson</a></li>
-      <li>The power of the economy (<a href="#">more...</a>)</li>
+      <li><strong>Summary</strong> This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands <a href="#">full product details...</a></li>
     </ul>
   </div>
   <div id="navigation">
-    <ul>
-      <li><a href="#">Basket</a></li>
-      <li><a href="browse.html">Categories</a></li>
-      <li><a href="#">Home</a></li>
-    </ul>
+    <ol>
+      <li><a accesskey="1" href="#">Your basket (2 items)</a></li>
+      <li><a accesskey="2" href="browse.html">Book categories</a></li>
+      <li><a accesskey="3" href="#">Home</a></li>
+    </ol>
   </div>
-  <p id="copyright">Copyright &copy; 2008</p>
+  <p id="copyright">Copyright &copy; 2008 BookStore</p>
   <p><a href="#">View full version</a></p>
 </html>
