--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <h1>Online Store</h1>
+  <h1>BookStore Online</h1>
   
   <div id="navigation">
     <ul>
