--- a/view.html
+++ b/view.html
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <h1>BookStore Online</h1>
-  <h2>The Long Tail</h2>
-  <div id="image">
-    <img src="images/long_tail.jpg"></img>
-  </div>
-  <div id="purchase">
-    <span id="price">&euro;16.99</span>
-    <span id="stock" class="in-stock">In stock</span>
-    <a href="#">Buy now..</a>
-  </div>
-  <div id="details">
-    <ul>
-      <li>by <a href="#">Chris Anderson</a></li>
-      <li><strong>Summary</strong> This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands <a href="#">full product details...</a></li>
-    </ul>
-  </div>
-  <div id="navigation">
-    <ol>
-      <li><a accesskey="1" href="#">Your basket (2 items)</a></li>
-      <li><a accesskey="2" href="browse.html">Book categories</a></li>
-      <li><a accesskey="3" href="#">Home</a></li>
-    </ol>
-  </div>
-  <p id="copyright">Copyright &copy; 2008 BookStore</p>
-  <p><a href="#">View full version</a></p>
+  <head>
+    <title>BookStore Online</title>
+  </head>
+  <body>
+    <h1>BookStore Online</h1>
+    <h2>The Long Tail</h2>
+    <div id="image">
+      <img src="images/long_tail.jpg"></img>
+    </div>
+    <div id="purchase">
+      <span id="price">&euro;16.99</span>
+      <span id="stock" class="in-stock">In stock</span>
+      <a href="#">Buy now..</a>
+    </div>
+    <div id="details">
+      <ul>
+        <li>by <a href="#">Chris Anderson</a></li>
+        <li><strong>Summary</strong> This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands <a href="#">full product details...</a></li>
+      </ul>
+    </div>
+    <div id="navigation">
+      <ol>
+        <li><a accesskey="1" href="#">Your basket (2 items)</a></li>
+        <li><a accesskey="2" href="browse.html">Book categories</a></li>
+        <li><a accesskey="3" href="#">Home</a></li>
+      </ol>
+    </div>
+    <p id="copyright">Copyright &copy; 2008 BookStore</p>
+    <p><a href="#">View full version</a></p>
+  </body>
 </html>
