--- a/browse.html
+++ b/browse.html
@@ -36,6 +36,12 @@
       <span class="author">by <a href="#">Kirk Chandlund</a></span>
       <span class="price">&euro;12.00</span>
     </div>
+    
+    <div id="search">
+      <form action="/" method="post">
+        <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
+      </form>
+    </div>
 
     <div id="navigation">
       <ul>
