--- a/search.html
+++ b/search.html
@@ -7,6 +7,11 @@
   <body>
     <h1>BookStore Online</h1>
   
+    <div id="search">
+      <form action="/" method="post">
+        <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
+      </form>
+    </div>
     <div id="navigation">
       <ul>
         <li><a href="#">Basket</a></li>
