--- a/view.html
+++ b/view.html
@@ -7,6 +7,7 @@
   <body>
     <h1>BookStore Online</h1>
     <h2>The Long Tail</h2>
+    <p>by <a href="#">Chris Anderson</a></p>
     <div id="image">
       <img src="images/long_tail.jpg"></img>
     </div>
@@ -17,9 +18,13 @@
     </div>
     <div id="details">
       <ul>
-        <li>by <a href="#">Chris Anderson</a></li>
         <li><strong>Summary</strong> This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands <a href="#">full product details...</a></li>
       </ul>
+    </div>
+    <div id="search">
+      <form action="/" method="post">
+        <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
+      </form>
     </div>
     <div id="navigation">
       <ol>
