full version link

--- a/browse.html
+++ b/browse.html
@@ -51,6 +51,6 @@
       </ul>
     </div>
     <p id="copyright">Copyright &copy; 2008</p>
-    <p><a href="#">View full version</a></p>
+    <p><a href="#">Full version</a></p>
   </body>
 </html>
