--- a/view.html
+++ b/view.html
@@ -34,6 +34,6 @@
       </ol>
     </div>
     <p id="copyright">Copyright &copy; 2008 BookStore</p>
-    <p><a href="#">View full version</a></p>
+    <p><a href="#">Full version</a></p>
   </body>
 </html>
