--- a/view.html
+++ b/view.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>BookStore Online</title>
+    <link href="/stylesheets/main.css" media="handheld" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>BookStore Online</h1>
