--- a/view.html
+++ b/view.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div id="search">
-      <form action="/" method="post">
+      <form action="search.html" method="post">
         <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
       </form>
     </div>
