--- a/browse.html
+++ b/browse.html
@@ -10,7 +10,7 @@
     <h1>BookStore Online</h1>
     
     <div id="search">
-      <form action="/" method="post">
+      <form action="search.html" method="post">
         <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
       </form>
     </div>
