jerk things around a bit

--- a/search.html
+++ b/search.html
@@ -53,11 +53,11 @@
     <hr/>
     
     <div id="navigation">
-      <ul>
-        <li><a href="#">Basket</a></li>
-        <li><a href="browse.html">Categories</a></li>
-        <li><a href="#">Home</a></li>
-      </ul>
+      <ol>
+        <li><a accesskey="1" href="#">Basket</a></li>
+        <li><a accesskey="2" href="browse.html">Categories</a></li>
+        <li><a accesskey="3" href="#">Home</a></li>
+      </ol>
     </div>
     
     <hr/>
