--- a/view.html
+++ b/view.html
@@ -11,13 +11,12 @@
     <div id="main">
       <h2>The Long Tail</h2>
       <p class="author">by <a href="#">Chris Anderson</a></p>
-      <div id="image">
+      <div class="image">
         <img src="images/long_tail.jpg"></img>
       </div>
-      <div id="purchase">
-        <span id="price">&euro;16.99</span>
-        <span id="stock" class="in-stock">In stock</span>
-        <a class="buy-now" href="#">Buy now</a>
+      <div class="purchase">
+        <p id="price">&euro;16.99 <span id="stock" class="in-stock">In stock</span></p>
+        <p><a class="buy-now" href="#">Buy now</a></p>
       </div>
       <div id="details">
         <h3>Summary</h3>
