--- a/search.html
+++ b/search.html
@@ -63,6 +63,6 @@
     <hr/>
     
     
-    <p id="copyright">Copyright &copy; 2008 BookStore | <a href="#">Full version</p>
+    <p id="copyright">Copyright &copy; 2008 BookStore<br/><a href="#">Full version</p>
   </body>
 </html>
