--- a/view.html
+++ b/view.html
@@ -38,6 +38,6 @@
       </ol>
     </div>
     <hr/>
-    <p id="copyright">Copyright &copy; 2008 BookStore | <a href="#">Full version</p>
+    <p id="copyright">Copyright &copy; 2008 BookStore<br/><a href="#">Full version</p>
   </body>
 </html>
