--- a/browse.html
+++ b/browse.html
@@ -31,7 +31,7 @@
       <div class="image"><img src="images/harry-potter.jpg" /></div>
       <div class="purchase">
         <p><span class="price">&euro;16.99</span> <span id="stock" class="in-stock">In stock now</span></p>
-        <a class="buy-now" href="#">Buy now</a>
+        <p><a class="buy-now" href="#">Buy now</a></p>
       </div>
       <br/>
     </div>
@@ -71,7 +71,7 @@
       <div class="image"><img src="images/1984.jpg" /></div>
       <div class="purchase">
         <p><span class="price">&euro;3.99</span> <span id="stock" class="while-stock">While stocks last</span></p>
-        <a class="buy-now" href="#">Buy now</a>
+        <p><a class="buy-now" href="#">Buy now</a></p>
       </div>
       <br/>
     </div>
