--- a/view.html
+++ b/view.html
@@ -4,6 +4,9 @@
   <head>
     <title>BookStore Online</title>
     <link href="stylesheets/main.css" media="handheld, screen" rel="stylesheet" type="text/css" />
+    <script src="javascripts/jquery.js" type="text/javascript"></script>
+    <script src="javascripts/jquery.truncate.js" type="text/javascript"></script>
+    <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
   <body>
     <h1>BookStore Online</h1>
@@ -20,7 +23,7 @@
       </div>
       <div id="details">
         <h3>Summary</h3>
-        <p>This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands. <a href="#">Full product details...</a></p>
+        <p>This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands.</p>
       </div>
     </div>
     <hr/>
