make some things valid

--- a/view.html
+++ b/view.html
@@ -15,7 +15,7 @@
       <h2>The Long Tail</h2>
       <p class="author">by <a href="#">Chris Anderson</a></p>
       <div class="image">
-        <img src="images/long_tail.jpg"></img>
+        <img src="images/long_tail.jpg" alt="The Long Tail"></img>
       </div>
       <div class="purchase">
         <p id="price">&euro;16.99 <span id="stock" class="in-stock">In stock</span></p>
@@ -29,7 +29,9 @@
     <hr/>
     <div id="search">
       <form action="search.html" method="post">
-        <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
+        <fieldset>
+          <input type="text" name="search" /> <input type="submit" name="submit" value="Search" />
+        </fieldset>
       </form>
     </div>
     <hr/>
