add errant a tag

--- a/view.html
+++ b/view.html
@@ -43,6 +43,6 @@
       </ol>
     </div>
     <hr/>
-    <p id="copyright">Copyright &copy; 2008 BookStore<br/><a href="#">Full version</p>
+    <p id="copyright">Copyright &copy; 2008 BookStore<br/><a href="#">Full version</a></p>
   </body>
 </html>
