alt tags and widths/heights

--- a/view.html
+++ b/view.html
@@ -15,7 +15,7 @@
       <h2>The Long Tail</h2>
       <p class="author">by <a href="#">Chris Anderson</a></p>
       <div class="image">
-        <img src="images/long_tail.jpg" alt="The Long Tail"></img>
+        <img src="images/long_tail.jpg" width="60" height="85" alt="The Long Tail"></img>
       </div>
       <div class="purchase">
         <p id="price">&euro;16.99 <span id="stock" class="in-stock">In stock</span></p>
