--- a/search.html
+++ b/search.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>BookStore Online</title>
+    <meta http-equiv="Cache-Control" content="max-age=200" />
     <link href="stylesheets/main.css" media="handheld, screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
