--- a/view.html
+++ b/view.html
@@ -5,11 +5,9 @@
     <title>BookStore Online</title>
     <meta http-equiv="Cache-Control" content="max-age=200" />
     <link href="stylesheets/main.css" media="handheld, screen" rel="stylesheet" type="text/css" />
-    <script src="javascripts/jquery.js" type="text/javascript"></script>
-    <script src="javascripts/jquery.truncate.js" type="text/javascript"></script>
     <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body id="view-page">
     <h1>BookStore Online</h1>
     <hr/>
     <div id="main">
@@ -24,7 +22,7 @@
       </div>
       <div id="details">
         <h3>Summary</h3>
-        <p>This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands.</p>
+        <p id="summary">This fascinating walk through the modern market place exposes many myths in today's economy and preaches the benefits of tightly focussed offerings rather than large faceless brands.</p>
       </div>
     </div>
     <hr/>
