--- a/browse.html
+++ b/browse.html
@@ -32,7 +32,7 @@
       <p class="author">by <a href="#">J. K. Rowling</a></p>
       <div class="image"><img width="60" height="93" alt="Harry Potter" src="images/harry-potter.jpg" /></div>
       <div class="purchase">
-        <p><span class="price">&euro;16.99</span> <span id="stock" class="in-stock">In stock now</span></p>
+        <p><span class="price">&euro;16.99</span> <span class="in-stock">In stock now</span></p>
         <p><a class="buy-now" href="#">Buy now</a></p>
       </div>
       <br/>
@@ -72,7 +72,7 @@
       <p class="author">by <a href="#">George Orwell</a></p>
       <div class="image"><img width="60" height="86" alt="1984" src="images/1984.jpg" /></div>
       <div class="purchase">
-        <p><span class="price">&euro;3.99</span> <span id="stock" class="while-stock">While stocks last</span></p>
+        <p><span class="price">&euro;3.99</span> <span class="while-stock">While stocks last</span></p>
         <p><a class="buy-now" href="#">Buy now</a></p>
       </div>
       <br/>
