--- a/browse.html
+++ b/browse.html
@@ -28,6 +28,7 @@
     <hr/>
   
     <div id="featured-product">
+      <h2>Featured</h2>
       <h3>Harry Potter &amp; the Dragon's fury of infinite wrath</h3>
       <p class="author">by <a href="#">J. K. Rowling</a></p>
       <div class="image"><img width="60" height="93" alt="Harry Potter" src="images/harry-potter.jpg" /></div>
